Fix image link invisible padding

--- a/src/components/notification/Notification.module.css
+++ b/src/components/notification/Notification.module.css
@@ -87,6 +87,7 @@
 
 .image {
   border-radius: var(--br-base);
+  height: min-content;
 }
 
 @media (--screen-tablet) {
